Poos replaced with coronas

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -148,7 +148,7 @@
     <ClInclude Include="Drawing.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Mouse.h" />
-    <ClInclude Include="Poo.h" />
+    <ClInclude Include="Corona.h" />
     <ClInclude Include="Resource.h" />
   </ItemGroup>
   <ItemGroup>
@@ -162,7 +162,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Mouse.cpp" />
-    <ClCompile Include="Poo.cpp" />
+    <ClCompile Include="Corona.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="FramebufferPS.hlsl">
